--- a/HTML_LEVEL_TWO/Labels.html
+++ b/HTML_LEVEL_TWO/Labels.html
@@ -6,13 +6,12 @@
   </head>
   <body>
       <form>
-          <label>
-              Enter Text:
-              <input type="text" name="" value="first">
-          </label>
+          <label for="userinput">Enter Input:</label>
+          <input id="notrequired" type="text" name="" placeholder= notrequired>
           <label>
             Enter Text:
-            <input type="text" name="" value="second">
+            <input type="required" name="" placeholder="required">
+            <input type="submit" name="" value="submit">
         </label>
 
       </form>
