--- a/CSS_LEVEL_ONE/part3.html
+++ b/CSS_LEVEL_ONE/part3.html
@@ -3,9 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title> Exercise Title </title>
+    <link rel="stylesheet" href="part3_master.css"
   </head>
   <body>
 <h3>I am h3 heading</h3>
-<div class= "firstDIV">gi</div>
+<div class= "firstDiv">
+    <p> I am inside the firstDiv class</p>
+</div>
+
+<div class= "secondDiv">
+    <p>I am inside the secondDiv class</p>
+</div>
+
+<p id="singledout">ids must be unique</p>
+
+<h3>here is the list</h3>
+
+<ul>
+    <li>confirm?<input type="checkbox" name="" value=""></li>
+    <li>Feedback? <input type="text" name="" value=""></li>
+    <li><a href="https://www.facebook.com/">facebook</a></li>
+    <li><a href="google.com">google</a></li>
+</ul>
   </body>
 </html>
