--- a/HTML_LEVEL_ONE_assesment.html
+++ b/HTML_LEVEL_ONE_assesment.html
@@ -18,10 +18,10 @@
            <li>Easy to use</li>
 
       </ol
-      <stron><h1>Bonus: Optional extra credit</strong></h1>
+      <strong><h1>Bonus: Optional extra credit</strong></h1>
 
     <a href="https://www.djangoproject.com/"><img src= "django.png" alt=""></a>
 
 
   </body>
-</html>
+</html>a
