--- a/HTML_LEVEL_TWO/Coursesignup.html
+++ b/HTML_LEVEL_TWO/Coursesignup.html
@@ -38,7 +38,7 @@
 
         <p></p>
 
-        <input type="submit"  name="" value="Sing up!">
+        <input type="submit"  name="" value="Signup!">
     </select>
 
 </form>
