--- a/CSS_LEVEL_TWO/Box_model.html
+++ b/CSS_LEVEL_TWO/Box_model.html
@@ -7,7 +7,12 @@
    </head>
   <body>
 
+    
     <h1 id="top">TOP</h1>
-    <h1 id="bottom">BOTTOM</h1>
+    <div class="main-div">
+      <h1 id="bottom">BOTTOM</h1>
+      <h1 id="right">Right</h1>
+    </div>
+    
   </body>
 </html>
