--- a/CSS_LEVEL_ONE/CSS_Levelone_Assesment.html
+++ b/CSS_LEVEL_ONE/CSS_Levelone_Assesment.html
@@ -17,7 +17,8 @@
            </ol>
            <form>
             <h2>enter some text</h2>
-            <input type="text" name="" value="">
+  
+            <textarea></textarea>
         </form>
 
     <form>
@@ -34,6 +35,7 @@
     </form>
 
     <p>Questions or any feedback?</p>
+    <textarea></textarea>
 
 
   </body>
